helm/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pokus-ewg
  labels:
    app: pokus-ewg
