helm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quarkus-latest-ref
  labels:
    app: quarkus-latest-ref
spec:
  ingressClassName: nginx
  rules:
    #  - host: quarkus-latest-ref.local
  - http:
      paths:
      - path: /kamiony
        pathType: Prefix
        backend:
          service:
            name: quarkus-latest-ref
            port:
              number: 8080
      - path: /q
        pathType: Prefix
        backend:
          service:
            name: quarkus-latest-ref
            port:
              number: 8080
